# nonumpy

./: .gitignore  LICENSE  README.md  __main__.py  pyproject.toml  requirements.txt
examples/: test_filters.py
native/: CMakeLists.txt
nonumpy/: __init__.py  ema.py  factory.py  filters.py  nonumpy.h  nonumpy_config.h  nonumpy_ema.c  nonumpy_ema.h  nonumpy_filters.c  nonumpy_filters.h
tests/: factory_tests.py
